--- a/Pendaftaran_Tenant/Views/Penyewa/KonfirmasiDaftar.cshtml
+++ b/Pendaftaran_Tenant/Views/Penyewa/KonfirmasiDaftar.cshtml
@@ -11,7 +11,7 @@
 <div class="col-md-12 col-xs-12 col-md-offset-3">
     @foreach (var item in Model)
     {
-        <div class="thumbnail clearfix text-center" style="max-width:500px;width:100%">
+        <div class="thumbnail clearfix text-center" style="max-width:500px;width:100%;margin-left:1.5%">
             <br />
             <table style="border:0 solid;float:none;margin:0 auto">
                 <tr>
