wis lah cuk kesel aku

--- a/Pendaftaran_Tenant/Views/Home/Index2.cshtml
+++ b/Pendaftaran_Tenant/Views/Home/Index2.cshtml
@@ -12,7 +12,7 @@
         <div class="col-md-4 col-xs-4">
             <div class="thumbnail clearfix text-center">
                 <span class="glyphicon glyphicon-book" style="font-size:50px"></span>
-                <p style="font-size:15px">Lihat produk, bahan, dan jenis sablon yang sudah terdaftar</p>
+                <p style="font-size:15px">Lihat produk dan detailnya</p>
                 <p><a onclick="location.href='@Url.Action("IndexProdukBig", "Penyewa")'" class="btn btn-success btn-lg">Lihat Produk</a></p>
                 @*<p>@Html.ActionLin*@@*k("Lihat Produk", "IndexProdukBig", "Penyewa", new { @class = "btn btn-success btn-lg"})</p>*@
             </div>
@@ -20,7 +20,7 @@
         <div class="col-md-4 col-xs-4">
             <div class="thumbnail clearfix text-center">
                 <span class="glyphicon glyphicon-certificate" style="font-size:50px"></span>
-                <p style="font-size:15px">Lihat karyawan yang sudah terdaftar</p>
+                <p style="font-size:15px">Lihat data karyawan</p>
                 <p><a onclick="location.href='@Url.Action("IndexKaryawanBig", "Penyewa")'" class="btn btn-success btn-lg">Lihat Karyawan</a></p>
 
             </div>
@@ -28,8 +28,8 @@
         <div class="col-md-4 col-xs-4">
             <div class="thumbnail clearfix text-center">
                 <span class="glyphicon glyphicon-cog" style="font-size:50px"></span>
-                <p style="font-size:15px">Lihat harga yang sudah terdaftar</p>
-                <p><a onclick="location.href='@Url.Action("IndexViewHarga", "Penyewa")'" class="btn btn-success btn-lg">Lihat harga</a></p>
+                <p style="font-size:15px">Lihat data harga per produk</p>
+                <p><a onclick="location.href='@Url.Action("IndexViewHargaFix", "Penyewa")'" class="btn btn-success btn-lg">Lihat harga</a></p>
 
             </div>
         </div>
