--- a/Pendaftaran_Tenant/Views/Penyewa/IndexKaryawanBig.cshtml
+++ b/Pendaftaran_Tenant/Views/Penyewa/IndexKaryawanBig.cshtml
@@ -65,7 +65,7 @@
                         @Html.DisplayFor(modelItem => item.jns_kelamin)
                     </td>
                     <td>
-                        @Html.ActionLink("Ubah", "EditKaryawan", new { id = item.id_karyawan }, new { @class = "btn btn-primary btn-sm" })
+                        @Html.ActionLink("Ubah", "EditKaryawan2", new { id = item.id_karyawan }, new { @class = "btn btn-primary btn-sm" })
                         @Html.ActionLink("Hapus", "DeleteKaryawan", new { id = item.id_karyawan }, new { @class = "btn btn-danger btn-sm" })
                     </td>
                 </tr>
