--- a/Pendaftaran_Tenant/Views/Penyewa/CreateProduk2.cshtml
+++ b/Pendaftaran_Tenant/Views/Penyewa/CreateProduk2.cshtml
@@ -80,7 +80,7 @@
                             <th style="text-align:center"><label for="namaproduk">Harga 1</label></th>
                         </tr>*@
                     <tr>
-                        <td style="text-align:center;width:135px"><input type="text" class="form-control" id="bahan1" name="bahan1" style="max-width:130px" /></td>
+                        <td style="text-align:center;width:115px"><input type="text" class="form-control" id="bahan1" name="bahan1" style="max-width:130px" /></td>
                         <td style="text-align:center;width:80px">
                             <div class="dropdown">
                                 <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" name="sablon1" id="btnsablon1" style="width:inherit">
@@ -107,7 +107,7 @@
                                 </ul>
                             </div>
                         </td>
-                        <td style="text-align:center"><input type="text" class="form-control" id="harga1" name="harga1" style="max-width:80px" /></td>
+                        <td style="text-align:center"><input type="number" class="form-control" id="harga1" name="harga1" style="max-width:80px" /></td>
                     </tr>
                     @*<tr>
                             <th style="text-align:center"><label for="namaproduk">Bahan 2</label></th>
@@ -141,7 +141,7 @@
                                 </ul>
                             </div>
                         </td>
-                        <td style="text-align:center"><input type="text" class="form-control" id="harga2" name="harga2" style="max-width:80px" /></td>
+                        <td style="text-align:center"><input type="number" class="form-control" id="harga2" name="harga2" style="max-width:80px" /></td>
                     </tr>
                     @*<tr>
                             <th style="text-align:center"><label for="namaproduk">Bahan 3</label></th>
@@ -175,7 +175,7 @@
                                 </ul>
                             </div>
                         </td>
-                        <td style="text-align:center"><input type="text" class="form-control" id="harga3" name="harga3" style="max-width:80px" /></td>
+                        <td style="text-align:center"><input type="number" class="form-control" id="harga3" name="harga3" style="max-width:80px" /></td>
                     </tr>
                     @*<tr>
                             <th style="text-align:center"><label for="namaproduk">Bahan 4</label></th>
@@ -209,7 +209,7 @@
                                 </ul>
                             </div>
                         </td>
-                        <td style="text-align:center"><input type="text" class="form-control" id="harga4" name="harga4" style="max-width:80px" /></td>
+                        <td style="text-align:center"><input type="number" class="form-control" id="harga4" name="harga4" style="max-width:80px" /></td>
                     </tr>
                     @*<tr>
                             <th style="text-align:center"><label for="namaproduk">Bahan 5</label></th>
@@ -243,7 +243,7 @@
                                 </ul>
                             </div>
                         </td>
-                        <td style="text-align:center"><input type="text" class="form-control" id="harga5" name="harga5" style="max-width:80px" /></td>
+                        <td style="text-align:center"><input type="number" class="form-control" id="harga5" name="harga5" style="max-width:80px" /></td>
                     </tr>
                 </table>
                 <p style="color:lightgrey;margin-left:10px"><h6><i style="color:darkgray;margin-left:10px">*Boleh dikosongkan bila tidak diperlukan</i></h6></p>
@@ -277,7 +277,7 @@
                                 </ul>
                             </div>
                         </td>
-                        <td style="text-align:center"><input type="text" class="form-control" id="hargatam1" name="hargatam1" style="max-width:80px;display:inline" /></td>
+                        <td style="text-align:center"><input type="number" class="form-control" id="hargatam1" name="hargatam1" style="max-width:80px;display:inline" /></td>
                     </tr>
                     <tr>
                         <td>
@@ -298,7 +298,7 @@
                                 </ul>
                             </div>
                         </td>
-                        <td style="text-align:center"><input type="text" class="form-control" id="hargatam2" name="hargatam2" style="max-width:80px;display:inline" /></td>
+                        <td style="text-align:center"><input type="number" class="form-control" id="hargatam2" name="hargatam2" style="max-width:80px;display:inline" /></td>
                     </tr>
                     <tr>
                         <td>
@@ -319,7 +319,7 @@
                                 </ul>
                             </div>
                         </td>
-                        <td style="text-align:center"><input type="text" class="form-control" id="hargatam3" name="hargatam3" style="max-width:80px;display:inline" /></td>
+                        <td style="text-align:center"><input type="number" class="form-control" id="hargatam3" name="hargatam3" style="max-width:80px;display:inline" /></td>
                     </tr>
                     <tr>
                         <td>
@@ -340,7 +340,7 @@
                                 </ul>
                             </div>
                         </td>
-                        <td style="text-align:center"><input type="text" class="form-control" id="hargatam4" name="hargatam4" style="max-width:80px;display:inline" /></td>
+                        <td style="text-align:center"><input type="number" class="form-control" id="hargatam4" name="hargatam4" style="max-width:80px;display:inline" /></td>
                     </tr>
                     <tr>
                         <td>
@@ -361,7 +361,7 @@
                                 </ul>
                             </div>
                         </td>
-                        <td style="text-align:center"><input type="text" class="form-control" id="hargatam5" name="hargatam5" style="max-width:80px;display:inline" /></td>
+                        <td style="text-align:center"><input type="number" class="form-control" id="hargatam5" name="hargatam5" style="max-width:80px;display:inline" /></td>
                     </tr>
                 </table>
                 <p style="color:lightgrey;margin-left:10px"><h6><i style="color:darkgray;margin-left:10px">*Boleh dikosongkan bila tidak diperlukan</i></h6></p>
