--- a/E-Commerce_MultiTenant/Views/Home/Indexku.cshtml
+++ b/E-Commerce_MultiTenant/Views/Home/Indexku.cshtml
@@ -1,39 +1,102 @@
-﻿@{
+﻿@model IEnumerable<E_Commerce_MultiTenant.Models.DataCarausel>
+
+@{
     ViewBag.Title = "Home Page";
 }
+<div style="margin-top:0px">
+    <div class="content-space-four">
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
 
-<div class="jumbotron">
-    @if (Session["nama_perusahaan"] == null)
-    {
-        <h1>Nama Kosong</h1>
-    }
-    else
-    {
-        <h1>@Session["nama_perusahaan"].ToString()</h1>
-    }
 
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    </div>
+    <div class="carousel slide" id="mycarousel" data-ride="carousel" style="margin-top:-15px;">
+        <ol class="carousel-indicators">
+            <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#mycarousel" data-slide-to="1"></li>
+            <li data-target="#mycarousel" data-slide-to="2"></li>
+            <li data-target="#mycarousel" data-slide-to="3"></li>
+
+        </ol>
+        <div class="carousel-inner">
+            @foreach (var gambar in Model.Select((value, i) => new { i, value }))
+            {
+                if (gambar.i == 0)
+                {
+                    <div class="item active">
+                        <img src="http://localhost:52494/Content/Images/@gambar.value.gambar" width="1600" height="850" />
+                        <div class="carousel-caption">
+                            <p>This week's Sale</p>
+                        </div>
+                    </div>
+                }
+                else
+                {
+                    <div class="item ">
+                        <img src="http://localhost:52494/Content/Images/@gambar.value.gambar" width="1600" height="850" />
+                        <div class="carousel-caption">
+                            <p>This week's Sale</p>
+                        </div>
+                    </div>
+                }
+            }
+           
+        </div>
+        <a class="left carousel-control" href="#mycarousel" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#mycarousel" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
 </div>
+@*<div class="jumbotron">
+        @if (Session["nama_perusahaan"] == null)
+        {
+            <h1>Nama Kosong</h1>
+        }
+        else
+        {
+            <h1>@Session["nama_perusahaan"].ToString()</h1>
+        }
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
+        <p><a href="" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+
+    <div class="row">
+        <div class="col-md-4">
+            <h2>Getting started</h2>
+            <p>
+                ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
+                enables a clean separation of concerns and gives you full control over markup
+                for enjoyable, agile development.
+            </p>
+            <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        </div>
+        <div class="col-md-4">
+            <h2>Get more libraries</h2>
+            <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
+            <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        </div>
+        <div class="col-md-4">
+            <h2>Web Hosting</h2>
+            <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
+            <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        </div>
+    </div>*@
