--- a/E-Commerce_MultiTenant/Views/Home/Indexku.cshtml
+++ b/E-Commerce_MultiTenant/Views/Home/Indexku.cshtml
@@ -3,24 +3,8 @@
 @{
     ViewBag.Title = "Home Page";
 }
-<div style="margin-top:0px">
+<div style="margin-left:0px;margin-right:0px;margin-top:8%">
     <div class="content-space-four">
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-
 
     </div>
     <div class="carousel slide" id="mycarousel" data-ride="carousel" style="margin-top:-15px;">
@@ -37,19 +21,15 @@
                 if (gambar.i == 0)
                 {
                     <div class="item active">
-                        <img src="http://localhost:52494/Content/Images/@gambar.value.gambar" width="1600" height="850" />
-                        <div class="carousel-caption">
-                            <p>This week's Sale</p>
-                        </div>
+                        <img src="http://localhost:52494/Content/Images/@gambar.value.gambar" style="width:1600px;height:550px" />
+                        
                     </div>
                 }
                 else
                 {
                     <div class="item ">
-                        <img src="http://localhost:52494/Content/Images/@gambar.value.gambar" width="1600" height="850" />
-                        <div class="carousel-caption">
-                            <p>This week's Sale</p>
-                        </div>
+                        <img src="http://localhost:52494/Content/Images/@gambar.value.gambar" style="width:1600px;height:550px" />
+                       
                     </div>
                 }
             }
