--- a/E-Commerce_MultiTenant/Views/Home/Konfirmasi.cshtml
+++ b/E-Commerce_MultiTenant/Views/Home/Konfirmasi.cshtml
@@ -2,18 +2,21 @@
 @{
     ViewBag.Title = "Konfirmasi";
 }
-
+@{
+    Layout = "~/Views/Shared/_LayoutNoBar.cshtml";
+}
+@Html.Raw(TempData["Pesan"])
 <br />
 <div class="col-md-12 col-xs-12">
     <div class="thumbnail clearfix text-center" style="max-width:500px;width:100%;margin-left:28%">
         <h2 style="color:#47a447">Pendaftaran Selesai</h2>
         <hr />
         <p>Anda telah berhasil melakukan pendaftaran.</p>
-        
+
         <p>Anda akan menuju ke halaman utama dalam 5 detik.</p>
         <p>Bila anda tidak dipindahkan secara otomatis, klik <a onclick="location.href='@Url.Action("Indexku","Home")'">di sini</a></p>
-      
-       
+
+
         <br />
         <br />
     </div>
