--- a/E-Commerce_MultiTenant/Content/bootstrap.css
+++ b/E-Commerce_MultiTenant/Content/bootstrap.css
@@ -4030,6 +4030,12 @@ textarea.input-group-sm > .input-group-btn > .btn {
   border: 1px solid transparent;
 }
 
+#navbarbelow {
+    -webkit-box-shadow: 0 8px 6px -6px #999;
+    -moz-box-shadow: 0 8px 6px -6px #999;
+    box-shadow: 0 8px 6px -6px #999;
+}
+
 .navbar:before,
 .navbar:after {
   display: table;
